--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "angular-in-memory-web-api": "~0.9.0",
     "@angular-devkit/build-angular": "~0.802.1",
     "@angular/cli": "~8.2.1",
     "@angular/compiler-cli": "~8.2.0",
